--- a/NR3C1_ranks/NR3C1_ranks_with_enrichr_API.ipynb
+++ b/NR3C1_ranks/NR3C1_ranks_with_enrichr_API.ipynb
@@ -7,12 +7,14 @@
    "source": [
     "# Getting NR3C1 Rankings with Enrichr API\n",
     "\n",
-    "This notebook takes the text files the gene lists directory and runs the gene sets inside through Enrichr. "
+    "This notebook takes the text files the gene lists directory and runs the gene sets inside through Enrichr.\n",
+    "\n",
+    "Note: Due to import issues with the scipy library, any code dependent on scipy is written as a comment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "fa77579b",
    "metadata": {},
    "outputs": [],
