--- a/NR3C1_ranks/NR3C1_ranks_with_enrichr_API.ipynb
+++ b/NR3C1_ranks/NR3C1_ranks_with_enrichr_API.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "2b38f0a6",
    "metadata": {
     "scrolled": true
@@ -459,7 +459,7 @@
        "17  0.259771  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "3fd464a4",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "698b0b6b",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "4464d6bd",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
        "       NR3C1 21868756 ChIP-Seq MCF10A Human  272.000000  0.823627"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "2e996eea",
    "metadata": {},
    "outputs": [
@@ -685,9 +685,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv3.9",
    "language": "python",
-   "name": "python3"
+   "name": "venv3.9"
   },
   "language_info": {
    "codemirror_mode": {
