--- a/Benchmarking Normalization Methods/benchmarking_normalization.ipynb
+++ b/Benchmarking Normalization Methods/benchmarking_normalization.ipynb
@@ -5,7 +5,7 @@
    "id": "ac40bd1a",
    "metadata": {},
    "source": [
-    "# Benchmarking Data Normalization Methods with the Dexamethasone Benchmark\n",
+    "# Benchmarking Data Normalization Methods with the Dexamethasone Benchmarking Resource\n",
     "\n",
     "This notebook reads in designated meta data and RNA-seq expression data files from a dexamethasone study and performs four normalization methods - counts per million (CPM), log transformation, z-score normalization, and quantile normalization - on the data.\n",
     "\n",
@@ -2735,7 +2735,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.2 ('venv1': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -2749,7 +2749,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "14f84f3ff6d1392257c2ca118ba762d5a9b531e036a7be88c358f45d1fae0cc1"
+   }
   }
  },
  "nbformat": 4,
