Update code for downloading L1000 data

--- a/L1000_data/Retrieving_L1000_Data.ipynb
+++ b/L1000_data/Retrieving_L1000_Data.ipynb
@@ -1063,17 +1063,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "id": "a61c88b9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "crisprkopert = 'NR1I2'"
+    "crisprkopert = 'GPR141'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "id": "fa1725fa",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1106,7 @@
        "   '$download_counter': 16}}]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 21,
    "id": "243591e9",
    "metadata": {},
    "outputs": [],
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "id": "967d7580",
    "metadata": {},
    "outputs": [],
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "id": "5aaf5769",
    "metadata": {},
    "outputs": [
@@ -1170,7 +1170,7 @@
        "20"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "id": "bf741667",
    "metadata": {},
    "outputs": [],
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "id": "284e1a6a",
    "metadata": {},
    "outputs": [],
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 26,
    "id": "262d982b",
    "metadata": {},
    "outputs": [],
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 27,
    "id": "95d9306b",
    "metadata": {},
    "outputs": [
@@ -1259,68 +1259,68 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>brain</td>\n",
-       "      <td>astrocytoma</td>\n",
-       "      <td>U251MG</td>\n",
-       "      <td>NR1I2</td>\n",
-       "      <td>96 h</td>\n",
-       "      <td>CRISPR Knockout</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2021-05-23</td>\n",
-       "      <td>https://lincs-dcic.s3.amazonaws.com/LINCS-data...</td>\n",
-       "      <td>XPR010_U251MG.311_96H</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>brain</td>\n",
-       "      <td>astrocytoma</td>\n",
-       "      <td>U251MG</td>\n",
-       "      <td>NR1I2</td>\n",
-       "      <td>96 h</td>\n",
-       "      <td>CRISPR Knockout</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2021-05-23</td>\n",
-       "      <td>https://lincs-dcic.s3.amazonaws.com/LINCS-data...</td>\n",
-       "      <td>XPR010_U251MG.311_96H</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>pancreas</td>\n",
        "      <td>pancreatic carcinoma</td>\n",
        "      <td>YAPC</td>\n",
-       "      <td>NR1I2</td>\n",
+       "      <td>GPR141</td>\n",
        "      <td>96 h</td>\n",
        "      <td>CRISPR Knockout</td>\n",
        "      <td>5</td>\n",
-       "      <td>2021-05-23</td>\n",
+       "      <td>2021-05-24</td>\n",
        "      <td>https://lincs-dcic.s3.amazonaws.com/LINCS-data...</td>\n",
-       "      <td>XPR010_YAPC.311_96H</td>\n",
+       "      <td>XPR017_YAPC.311_96H</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>prostate gland</td>\n",
+       "      <td>prostate adenocarcinoma</td>\n",
+       "      <td>PC3</td>\n",
+       "      <td>GPR141</td>\n",
+       "      <td>96 h</td>\n",
+       "      <td>CRISPR Knockout</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2021-05-24</td>\n",
+       "      <td>https://lincs-dcic.s3.amazonaws.com/LINCS-data...</td>\n",
+       "      <td>XPR017_PC3.311B_96H</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>prostate gland</td>\n",
+       "      <td>prostate adenocarcinoma</td>\n",
+       "      <td>PC3</td>\n",
+       "      <td>GPR141</td>\n",
+       "      <td>96 h</td>\n",
+       "      <td>CRISPR Knockout</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2021-05-24</td>\n",
+       "      <td>https://lincs-dcic.s3.amazonaws.com/LINCS-data...</td>\n",
+       "      <td>XPR017_PC3.311B_96H</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>pancreas</td>\n",
        "      <td>pancreatic carcinoma</td>\n",
        "      <td>YAPC</td>\n",
-       "      <td>NR1I2</td>\n",
+       "      <td>GPR141</td>\n",
        "      <td>96 h</td>\n",
        "      <td>CRISPR Knockout</td>\n",
        "      <td>5</td>\n",
-       "      <td>2021-05-23</td>\n",
+       "      <td>2021-05-24</td>\n",
        "      <td>https://lincs-dcic.s3.amazonaws.com/LINCS-data...</td>\n",
-       "      <td>XPR010_YAPC.311_96H</td>\n",
+       "      <td>XPR017_YAPC.311_96H</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>prostate gland</td>\n",
-       "      <td>prostate adenocarcinoma</td>\n",
-       "      <td>PC3</td>\n",
-       "      <td>NR1I2</td>\n",
+       "      <td>brain</td>\n",
+       "      <td>astrocytoma</td>\n",
+       "      <td>U251MG</td>\n",
+       "      <td>GPR141</td>\n",
        "      <td>96 h</td>\n",
        "      <td>CRISPR Knockout</td>\n",
        "      <td>5</td>\n",
-       "      <td>2021-05-23</td>\n",
+       "      <td>2021-05-24</td>\n",
        "      <td>https://lincs-dcic.s3.amazonaws.com/LINCS-data...</td>\n",
-       "      <td>XPR010_PC3.311B_96H</td>\n",
+       "      <td>XPR017_U251MG.311_96H</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1328,28 +1328,28 @@
       ],
       "text/plain": [
        "           tissue                  disease cell_line pert_name pert_time  \\\n",
-       "0           brain              astrocytoma    U251MG     NR1I2      96 h   \n",
-       "1           brain              astrocytoma    U251MG     NR1I2      96 h   \n",
-       "2        pancreas     pancreatic carcinoma      YAPC     NR1I2      96 h   \n",
-       "3        pancreas     pancreatic carcinoma      YAPC     NR1I2      96 h   \n",
-       "4  prostate gland  prostate adenocarcinoma       PC3     NR1I2      96 h   \n",
+       "0        pancreas     pancreatic carcinoma      YAPC    GPR141      96 h   \n",
+       "1  prostate gland  prostate adenocarcinoma       PC3    GPR141      96 h   \n",
+       "2  prostate gland  prostate adenocarcinoma       PC3    GPR141      96 h   \n",
+       "3        pancreas     pancreatic carcinoma      YAPC    GPR141      96 h   \n",
+       "4           brain              astrocytoma    U251MG    GPR141      96 h   \n",
        "\n",
        "         pert_type  data_level creation_time  \\\n",
-       "0  CRISPR Knockout           5    2021-05-23   \n",
-       "1  CRISPR Knockout           5    2021-05-23   \n",
-       "2  CRISPR Knockout           5    2021-05-23   \n",
-       "3  CRISPR Knockout           5    2021-05-23   \n",
-       "4  CRISPR Knockout           5    2021-05-23   \n",
+       "0  CRISPR Knockout           5    2021-05-24   \n",
+       "1  CRISPR Knockout           5    2021-05-24   \n",
+       "2  CRISPR Knockout           5    2021-05-24   \n",
+       "3  CRISPR Knockout           5    2021-05-24   \n",
+       "4  CRISPR Knockout           5    2021-05-24   \n",
        "\n",
        "                                       persistent_id                  batch  \n",
-       "0  https://lincs-dcic.s3.amazonaws.com/LINCS-data...  XPR010_U251MG.311_96H  \n",
-       "1  https://lincs-dcic.s3.amazonaws.com/LINCS-data...  XPR010_U251MG.311_96H  \n",
-       "2  https://lincs-dcic.s3.amazonaws.com/LINCS-data...    XPR010_YAPC.311_96H  \n",
-       "3  https://lincs-dcic.s3.amazonaws.com/LINCS-data...    XPR010_YAPC.311_96H  \n",
-       "4  https://lincs-dcic.s3.amazonaws.com/LINCS-data...    XPR010_PC3.311B_96H  "
+       "0  https://lincs-dcic.s3.amazonaws.com/LINCS-data...    XPR017_YAPC.311_96H  \n",
+       "1  https://lincs-dcic.s3.amazonaws.com/LINCS-data...    XPR017_PC3.311B_96H  \n",
+       "2  https://lincs-dcic.s3.amazonaws.com/LINCS-data...    XPR017_PC3.311B_96H  \n",
+       "3  https://lincs-dcic.s3.amazonaws.com/LINCS-data...    XPR017_YAPC.311_96H  \n",
+       "4  https://lincs-dcic.s3.amazonaws.com/LINCS-data...  XPR017_U251MG.311_96H  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1363,13 +1363,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "95d99152",
    "metadata": {},
    "outputs": [],
    "source": [
     "crisprko_table.to_csv(f\"{crisprkopert}_L1000_CRISPRKO_data.tsv\", sep='\\t', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e348b13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
